--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
+
+    // log4j
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
+
 }
 
 tasks.withType(JavaCompile) {
